src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__error__tests__snapshot_error_long_message.snap
---
source: src/adapters/tui/widgets/error.rs
expression: terminal.backend()
---
"┌Error───────────────────────────────────────────┐"
"│A very long error message that should wrap      │"
"│around the available width in the terminal      │"
"│                                                │"
"│Press Enter to return, Esc to quit              │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
