src/adapters/tui/widgets/snapshots/omakure__adapters__tui__widgets__error__tests__snapshot_error_message.snap
---
source: src/adapters/tui/widgets/error.rs
expression: terminal.backend()
---
"┌Error───────────────────────────────────────────┐"
"│Something went wrong!                           │"
"│                                                │"
"│Press Enter to return, Esc to quit              │"
"│                                                │"
"│                                                │"
"│                                                │"
"└────────────────────────────────────────────────┘"
